--- a/estilo/style.css
+++ b/estilo/style.css
@@ -5,13 +5,10 @@
     padding: 0px;
 }
 
-html, body {
+body {
     height: 100vh;
     width: 100vw;
     background-color:black;
-}
-
-body {
     background-image: url('../imagens/fundo-madeira.jpg');
     background-repeat: no-repeat;
     background-position: top center;
@@ -45,7 +42,7 @@ main {
 }
 
 #redes-sociais {
-    margin: 10px;
+    text-align: right;
 }
 
 #redes-sociais img {
